[package]
name = "ds18b20-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-idf-sys = { version = "0.34", features = ["binstart"] }
esp-idf-hal = "0.42"
esp-idf-svc = "0.45"
embedded-svc = "0.27"
onewire = "0.3"
ds18b20 = "0.7"
heapless = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
embuild = "0.31"

